--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -8,7 +8,7 @@
 <body>
 
 <header>
-  <button class="menu-button" onclick="toggleSidebar()">☰ Menu</button>
+  <button class="menu-button" onclick="toggleSidebar()">☰</button>
   IA Mates
 </header>
 
@@ -39,6 +39,15 @@
   </ul>
 </div>
 
+  <div class="language-selector">
+    <div class="language-icon notranslate" onclick="toggleLanguageMenu()">🌍</div>
+    <div class="language-menu" id="languageMenu">
+      <button class="translateButton notranslate" data-lang="fr">FR</button>
+      <button class="translateButton notranslate" data-lang="en">EN</button>
+      <button class="translateButton notranslate" data-lang="de">DE</button>
+    </div>
+  </div>
+
 <div class="chatbox" id="chatbox">
   <div class="message bot">Ask me any legal question below 👇</div>
 </div>
@@ -52,6 +61,10 @@
 function toggleSidebar() {
   document.getElementById("sidebar").classList.toggle("active");
   document.body.classList.toggle("sidebar-active");
+}
+
+function toggleLanguageMenu() {
+  document.getElementById("languageMenu").classList.toggle("show");
 }
 
 async function send() {
@@ -84,6 +97,31 @@ async function send() {
   chatbox.scrollTop = chatbox.scrollHeight;
 }
 </script>
+
+<div id="google_translate_element" style="display:none;"></div>
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+
+    function changeLanguage(lang) {
+      let select = document.querySelector(".goog-te-combo");
+      if (select) {
+        select.value = lang;
+        select.dispatchEvent(new Event("change"));
+      } else {
+        alert("Google Translate is not yet ready. Wait a few seconds and then try again.");
+      }
+    }
+
+    document.querySelectorAll(".translateButton").forEach(button => {
+      button.addEventListener("click", function() {
+        changeLanguage(this.getAttribute("data-lang"));
+      });
+    });
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 </html>
