--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -38,6 +38,15 @@
   </ul>
 </div>
 
+    <div class="language-selector">
+    <div class="language-icon notranslate" onclick="toggleLanguageMenu()">🌍</div>
+    <div class="language-menu" id="languageMenu">
+      <button class="translateButton notranslate" data-lang="fr">FR</button>
+      <button class="translateButton notranslate" data-lang="en">EN</button>
+      <button class="translateButton notranslate" data-lang="de">DE</button>
+    </div>
+  </div>
+
   <div class="chatbox" id="chatbox"></div>
   <div class="choices" id="interaction"></div>
 
