--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -152,5 +152,31 @@
 
     loadQuestion();
   </script>
+
+  <div id="google_translate_element" style="display:none;"></div>
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+
+    function changeLanguage(lang) {
+      let select = document.querySelector(".goog-te-combo");
+      if (select) {
+        select.value = lang;
+        select.dispatchEvent(new Event("change"));
+      } else {
+        alert("Google Translate is not yet ready. Wait a few seconds and then try again.");
+      }
+    }
+
+    document.querySelectorAll(".translateButton").forEach(button => {
+      button.addEventListener("click", function() {
+        changeLanguage(this.getAttribute("data-lang"));
+      });
+    });
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  
 </body>
 </html>
