--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IA Mates</title>
+  <title class="notranslate">IA Mates</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
