--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title class="notranslate">IA Mates</title>
+  <title>IA Mates</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
-<header>
+<header class="notranslate">
   <button class="menu-button" onclick="toggleSidebar()">☰</button>
   IA Mates
 </header>
