--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -25,15 +25,7 @@
     <li>
       <span>Pre-Exam</span>
       <ul>
-        <li><a href="/menu/pre-exam/qcm">QCM</a></li>
-        <li><a href="/menu/pre-exam/open">OPEN</a></li>
-      </ul>
-    </li>
-    <li>
-      <span>Paper D</span>
-      <ul>
-        <li><a href="/menu/paper-d/qcm">QCM</a></li>
-        <li><a href="/menu/paper-d/open">OPEN</a></li>
+        <li><a href="/menu/pre-exam/qcm">VRAI/FAUX</a></li>
       </ul>
     </li>
   </ul>
