--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -22,18 +22,8 @@
       </ul>
     </li>
     <li>
-      <span>Pre-Exam</span>
-      <ul>
-        <li><a href="/menu/pre-exam/qcm">QCM</a></li>
-        <li><a href="/menu/pre-exam/open">OPEN</a></li>
-      </ul>
-    </li>
-    <li>
-      <span>Paper D</span>
-      <ul>
-        <li><a href="/menu/paper-d/qcm">QCM</a></li>
-        <li><a href="/menu/paper-d/open">OPEN</a></li>
-      </ul>
+      <span>Chat</span>
+      <ul><li><a href="/chat">Chat</a></ul>
     </li>
   </ul>
 </div>
