--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -22,8 +22,7 @@
       </ul>
     </li>
     <li>
-      <span>Chat</span>
-      <ul><li><a href="/chat">Chat</a></ul>
+      <ul><a href="/">Chat</a></ul>
     </li>
   </ul>
 </div>
